# arrow-hdf

./: CMakeLists.txt  CMakePresets.json  README.md
arrow_hdf/: Address.cpp  Address.h  Hdf5File.cpp  Hdf5File.h  Hdf5File.hpp  Hierarchy.cpp  Hierarchy.h  Hierarchy.hpp
cmake/: arrow_hdfConfig.cmake.in
docs/: layout.md
test/: CMakeLists.txt  test_address.cpp  test_hierarchy.cpp  test_roundtrip.cpp  test_write_tables.cpp
